# fastmod

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: release.yml
src/: main.rs  terminal.rs
