[package]
name = "fastmod"
version = "0.4.0"
authors = ["Scott Wolchok <swolchok@fb.com>"]
description = "Fast, partial replacement for codemod (find/replace tool for programmers)"
edition = "2018"
homepage = "https://github.com/facebookincubator/fastmod"
repository = "https://github.com/facebookincubator/fastmod"
readme = "README.md"
keywords = ["codemod"]
categories = ["command-line-utilities", "development-tools"]
license = "Apache-2.0"

[dependencies]
clap = "2.31.2"
crossterm = "0.17"
diff = "0.1.11"
failure = "0.1.1"
grep = "0.2.5"
ignore = "0.4.1"
num_cpus = "1.8.0"
regex = "1.1.2"
rprompt = "1.0.3"

[dev-dependencies]
assert_cmd = "1"
tempdir = "0.3"
