[package]
name = "fastmod"
version = "0.4.4"
authors = ["Scott Wolchok <swolchok@fb.com>"]
description = "Fast, partial replacement for codemod (find/replace tool for programmers)"
edition = "2018"
homepage = "https://github.com/facebookincubator/fastmod"
repository = "https://github.com/facebookincubator/fastmod"
readme = "README.md"
keywords = ["codemod"]
categories = ["command-line-utilities", "development-tools"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "wrap_help"] }
crossterm = "0.27"
diff = "0.1.11"
grep = "0.3.1"
ignore = "0.4.1"
num_cpus = "1.8.0"
regex = "1.5.5"
rprompt = "2.1.1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.8.0"
